Fix vertical alignment in bars

--- a/src/App.css
+++ b/src/App.css
@@ -32,11 +32,13 @@
 
 h1 {
   margin: 0;
-  font-size: 2rem;
+  font-size: 1.85rem;
+  font-weight: 700;
 }
 
 .caption {
   color: #808080;
+  font-size: 0.85rem;
 }
 
 .headerText {
